Liquidation of Deposit Funds/force-app/main/default/objects/Case/fields/Account_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_First_Name__c</fullName>
    <formula>Account.PersonContact.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account First Name</label>
    <type>Text</type>
</CustomField>