Liquidation of Deposit Funds/force-app/main/default/objects/Case/fields/Account_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Last_Name__c</fullName>
    <formula>Account.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Last Name</label>
    <type>Text</type>
</CustomField>