Liquidation of Deposit Funds/force-app/main/default/objects/Case/fields/ACH_Claim_Status__c.field-meta.xml
<CustomField>
    <fullName>ACH_Claim_Status__c</fullName>
    <label>ACH Claim Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>