Liquidation of Deposit Funds/force-app/main/default/objects/Case/fields/Amount_Disbursed__c.field-meta.xml
<CustomField>
    <fullName>Amount_Disbursed__c</fullName>
    <label>Amount Disbursed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>