Liquidation of Deposit Funds/force-app/main/default/objects/Case/fields/Assigned_Date__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Date__c</fullName>
    <formula>IF( NOT( ISBLANK(OwnerId)),  TODAY(), NULL  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assigned Date</label>
    <type>Date</type>
</CustomField>