Liquidation of Deposit Funds/force-app/main/default/objects/Case/fields/Branch_Name__c.field-meta.xml
<CustomField>
    <fullName>Branch_Name__c</fullName>
    <label>Branch Name</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Branch_Town__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Adjuntas</fullName>
            </value>
            <value>
                <fullName>Aeropuerto</fullName>
            </value>
            <value>
                <fullName>Aguada</fullName>
            </value>
            <value>
                <fullName>Aguadilla Mall</fullName>
            </value>
            <value>
                <fullName>Aguadilla Sur</fullName>
            </value>
            <value>
                <fullName>Aguas Buenas</fullName>
            </value>
            <value>
                <fullName>Aibonito</fullName>
            </value>
            <value>
                <fullName>Altamira</fullName>
            </value>
            <value>
                <fullName>Añasco</fullName>
            </value>
            <value>
                <fullName>Arecibo Aeropuerto</fullName>
            </value>
            <value>
                <fullName>Arecibo Highway</fullName>
            </value>
            <value>
                <fullName>Arecibo San Luis</fullName>
            </value>
            <value>
                <fullName>Arroyo</fullName>
            </value>
            <value>
                <fullName>Ave. 65 Infantería Shopping Center</fullName>
            </value>
            <value>
                <fullName>Barbosa</fullName>
            </value>
            <value>
                <fullName>Barceloneta Prime Outlets</fullName>
            </value>
            <value>
                <fullName>Barranquitas</fullName>
            </value>
            <value>
                <fullName>Barrio Obrero</fullName>
            </value>
            <value>
                <fullName>Bayamón Center</fullName>
            </value>
            <value>
                <fullName>Bayamón Oeste</fullName>
            </value>
            <value>
                <fullName>Buchanan</fullName>
            </value>
            <value>
                <fullName>Cabo Rojo La Hacienda</fullName>
            </value>
            <value>
                <fullName>Caguas Pueblo</fullName>
            </value>
            <value>
                <fullName>Calle Loíza</fullName>
            </value>
            <value>
                <fullName>Campo Rico</fullName>
            </value>
            <value>
                <fullName>Camuy</fullName>
            </value>
            <value>
                <fullName>Canovanas Outlet</fullName>
            </value>
            <value>
                <fullName>Caparra Center</fullName>
            </value>
            <value>
                <fullName>Carolina Highway</fullName>
            </value>
            <value>
                <fullName>Cayey Montellano</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>