Liquidation of Deposit Funds/force-app/main/default/objects/Case/fields/Branch_Town__c.field-meta.xml
<CustomField>
    <fullName>Branch_Town__c</fullName>
    <label>Branch Town</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Adjuntas</fullName>
            </value>
            <value>
                <fullName>Aguada</fullName>
            </value>
            <value>
                <fullName>Aguadilla</fullName>
            </value>
            <value>
                <fullName>Aguas Buenas</fullName>
            </value>
            <value>
                <fullName>Aibonito</fullName>
            </value>
            <value>
                <fullName>Añasco</fullName>
            </value>
            <value>
                <fullName>Arecibo</fullName>
            </value>
            <value>
                <fullName>Arroyo</fullName>
            </value>
            <value>
                <fullName>Barceloneta</fullName>
            </value>
            <value>
                <fullName>Barranquitas</fullName>
            </value>
            <value>
                <fullName>Bayamón</fullName>
            </value>
            <value>
                <fullName>Cabo Rojo</fullName>
            </value>
            <value>
                <fullName>Caguas</fullName>
            </value>
            <value>
                <fullName>Camuy</fullName>
            </value>
            <value>
                <fullName>Canóvanas</fullName>
            </value>
            <value>
                <fullName>Carolina</fullName>
            </value>
            <value>
                <fullName>Cayey</fullName>
            </value>
            <value>
                <fullName>Ceiba</fullName>
            </value>
            <value>
                <fullName>Ciales</fullName>
            </value>
            <value>
                <fullName>Cidra</fullName>
            </value>
            <value>
                <fullName>Coamo</fullName>
            </value>
            <value>
                <fullName>Comerio</fullName>
            </value>
            <value>
                <fullName>Corozal</fullName>
            </value>
            <value>
                <fullName>Culebra</fullName>
            </value>
            <value>
                <fullName>Dorado</fullName>
            </value>
            <value>
                <fullName>Fajardo</fullName>
            </value>
            <value>
                <fullName>Florida</fullName>
            </value>
            <value>
                <fullName>Guayama</fullName>
            </value>
            <value>
                <fullName>Guayanilla</fullName>
            </value>
            <value>
                <fullName>Guaynabo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>