Liquidation of Deposit Funds/force-app/main/default/objects/Case/fields/Case_Detail_Page_URL__c.field-meta.xml
<CustomField>
    <fullName>Case_Detail_Page_URL__c</fullName>
    <formula>&quot;https://resilient-badger-m2qcfb-dev-ed.trailblaze.my.site.com/LiquidationOfDepositFunds/s/case/&quot; +  Id  + &quot;/detail&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Detail Page URL</label>
    <type>Text</type>
</CustomField>