Liquidation of Deposit Funds/force-app/main/default/objects/Case/fields/Case_Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>Case_Owner_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case Owner Name</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>