Liquidation of Deposit Funds/force-app/main/default/objects/Case/fields/CD_JIRA_Verification__c.field-meta.xml
<CustomField>
    <fullName>CD_JIRA_Verification__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CD/JIRA Verification</label>
    <type>Checkbox</type>
</CustomField>