Liquidation of Deposit Funds/force-app/main/default/objects/Case/fields/Closed_Date__c.field-meta.xml
<CustomField>
    <fullName>Closed_Date__c</fullName>
    <formula>IF( ISPICKVAL( Workflow_Status__c , &quot;Closed&quot;) ,  TODAY() , NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Closed Date</label>
    <type>Date</type>
</CustomField>