Liquidation of Deposit Funds/force-app/main/default/objects/Case/fields/Credit_Cards_Coded_and_Closed__c.field-meta.xml
<CustomField>
    <fullName>Credit_Cards_Coded_and_Closed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Credit Cards Coded and Closed</label>
    <type>Checkbox</type>
</CustomField>