Liquidation of Deposit Funds/force-app/main/default/objects/Case/fields/Customer_Pick_up_Date__c.field-meta.xml
<CustomField>
    <fullName>Customer_Pick_up_Date__c</fullName>
    <label>Customer Pick up Date</label>
    <type>Date</type>
</CustomField>