Liquidation of Deposit Funds/force-app/main/default/objects/Case/fields/Disbursed_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Disbursed_Account_Number__c</fullName>
    <formula>LEFT( Disbursement_Account_Number__c , 3) &amp; &apos;-&apos; &amp; RIGHT(Disbursement_Account_Number__c , 6)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Disbursed Account Number</label>
    <type>Text</type>
</CustomField>