Liquidation of Deposit Funds/force-app/main/default/objects/Case/fields/Disbursement__c.field-meta.xml
<CustomField>
    <fullName>Disbursement__c</fullName>
    <label>Disbursement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Account deposit</fullName>
            </value>
            <value>
                <fullName>Pick-up at branch</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>