Liquidation of Deposit Funds/force-app/main/default/objects/Case/fields/Disbursement_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Disbursement_Account_Number__c</fullName>
    <label>Disbursement Account Number</label>
    <length>9</length>
    <type>Text</type>
</CustomField>