Liquidation of Deposit Funds/force-app/main/default/objects/Case/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <formula>Account.PersonContact.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email</label>
    <type>Text</type>
</CustomField>