Liquidation of Deposit Funds/force-app/main/default/objects/Case/fields/Goverment_Deposits_after_Death__c.field-meta.xml
<CustomField>
    <fullName>Goverment_Deposits_after_Death__c</fullName>
    <label>Goverment Deposits after Death</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>