Liquidation of Deposit Funds/force-app/main/default/objects/Case/fields/Is_the_sum_all_account_more_than_15k__c.field-meta.xml
<CustomField>
    <fullName>Is_the_sum_all_account_more_than_15k__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is the sum all account more than 15k?</label>
    <type>Checkbox</type>
</CustomField>