Liquidation of Deposit Funds/force-app/main/default/objects/Case/fields/Is_there_a_Will__c.field-meta.xml
<CustomField>
    <fullName>Is_there_a_Will__c</fullName>
    <label>Is there a Will?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes, Will in PR</fullName>
            </value>
            <value>
                <fullName>Yes, Will in USA</fullName>
            </value>
            <value>
                <fullName>No, without Will</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>