Liquidation of Deposit Funds/force-app/main/default/objects/Case/fields/Legal_Compliance__c.field-meta.xml
<CustomField>
    <fullName>Legal_Compliance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Legal Compliance</label>
    <type>Checkbox</type>
</CustomField>