Liquidation of Deposit Funds/force-app/main/default/objects/Case/fields/Other_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Other_Phone_Number__c</fullName>
    <label>Other Phone Number</label>
    <type>Phone</type>
</CustomField>