Liquidation of Deposit Funds/force-app/main/default/objects/Case/fields/PCAS_ACH_Claim_Open__c.field-meta.xml
<CustomField>
    <fullName>PCAS_ACH_Claim_Open__c</fullName>
    <label>PCAS ACH Claim Open</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>