Liquidation of Deposit Funds/force-app/main/default/objects/Case/fields/Relationship__c.field-meta.xml
<CustomField>
    <fullName>Relationship__c</fullName>
    <label>Relationship</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Father</fullName>
            </value>
            <value>
                <fullName>Mother</fullName>
            </value>
            <value>
                <fullName>Brother</fullName>
            </value>
            <value>
                <fullName>Sister</fullName>
            </value>
            <value>
                <fullName>Son</fullName>
            </value>
            <value>
                <fullName>Daughter</fullName>
            </value>
            <value>
                <fullName>Grandfather</fullName>
            </value>
            <value>
                <fullName>Grandmother</fullName>
            </value>
            <value>
                <fullName>Grandson</fullName>
            </value>
            <value>
                <fullName>Granddaughter</fullName>
            </value>
            <value>
                <fullName>Uncle</fullName>
            </value>
            <value>
                <fullName>Aunt</fullName>
            </value>
            <value>
                <fullName>Nephew</fullName>
            </value>
            <value>
                <fullName>Niece</fullName>
            </value>
            <value>
                <fullName>Cousin</fullName>
            </value>
            <value>
                <fullName>Stepfather</fullName>
            </value>
            <value>
                <fullName>Stepmother</fullName>
            </value>
            <value>
                <fullName>Stepbrother</fullName>
            </value>
            <value>
                <fullName>Stepsister</fullName>
            </value>
            <value>
                <fullName>Husband</fullName>
            </value>
            <value>
                <fullName>Wife</fullName>
            </value>
            <value>
                <fullName>Fiancé</fullName>
            </value>
            <value>
                <fullName>Fiancée</fullName>
            </value>
            <value>
                <fullName>Spouse</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>