Liquidation of Deposit Funds/force-app/main/default/objects/Case/fields/Resolution_Status__c.field-meta.xml
<CustomField>
    <fullName>Resolution_Status__c</fullName>
    <label>Resolution Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Denied</fullName>
            </value>
            <value>
                <fullName>Denied-Funds Exceed $15k</fullName>
            </value>
            <value>
                <fullName>Denied-No Funds Available</fullName>
            </value>
            <value>
                <fullName>Approved-Deposit</fullName>
            </value>
            <value>
                <fullName>Approved-Pickup Check</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>