Liquidation of Deposit Funds/force-app/main/default/objects/Case/fields/Social_Security_Number__c.field-meta.xml
<CustomField>
    <fullName>Social_Security_Number__c</fullName>
    <externalId>true</externalId>
    <label>Social Security Number</label>
    <length>9</length>
    <type>Text</type>
</CustomField>