Liquidation of Deposit Funds/force-app/main/default/objects/Case/fields/SSN__c.field-meta.xml
<CustomField>
    <fullName>SSN__c</fullName>
    <formula>LEFT( Social_Security_Number__c , 3) &amp; &apos;-&apos; &amp; MID(Social_Security_Number__c, 4, 2) &amp; &apos;-&apos; &amp; RIGHT(Social_Security_Number__c, 4)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SSN</label>
    <type>Text</type>
</CustomField>