Liquidation of Deposit Funds/force-app/main/default/objects/Case/fields/Verify_Goverment_Deposite_After_Death__c.field-meta.xml
<CustomField>
    <fullName>Verify_Goverment_Deposite_After_Death__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Verify Goverment Deposite After Death</label>
    <type>Checkbox</type>
</CustomField>