Liquidation of Deposit Funds/force-app/main/default/objects/Case/fields/Where_Is_he_located__c.field-meta.xml
<CustomField>
    <fullName>Where_Is_he_located__c</fullName>
    <label>Where Is he located?</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active Duty in US Armed Forces</fullName>
            </value>
            <value>
                <fullName>Puerto Rico</fullName>
            </value>
            <value>
                <fullName>Unites States</fullName>
            </value>
            <value>
                <fullName>Foreign Country</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>