Liquidation of Deposit Funds/force-app/main/default/objects/Case/fields/Will_All_The_Heirs_Be_Present__c.field-meta.xml
<CustomField>
    <fullName>Will_All_The_Heirs_Be_Present__c</fullName>
    <label>Will All The Heirs Be Present?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>