Liquidation of Deposit Funds/force-app/main/default/objects/Case/fields/Workflow_Status__c.field-meta.xml
<CustomField>
    <fullName>Workflow_Status__c</fullName>
    <label>Workflow Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>In-Progress</fullName>
            </value>
            <value>
                <fullName>Hold</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>